--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
 	android:layout_height="wrap_content"
 	android:layout_width="wrap_content"
-
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<ImageView
 		android:id="@+id/iv_loading"
@@ -14,6 +14,7 @@
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toTopOf="parent"
+		tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
