--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -9,7 +9,7 @@
 		android:id="@+id/tabLayout"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:background="@color/baseline"
+		android:background="@color/colorPrimaryDark"
 		android:overScrollMode="never"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
