--- a/app/src/main/res/drawable/fragment_chat_message_left.xml
+++ b/app/src/main/res/drawable/fragment_chat_message_left.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
-	<solid android:color="@color/baseline_tint2" />
+	<solid android:color="@color/colorAccentDark" />
 	<corners android:bottomLeftRadius="0dp" android:radius="20dp" />
 </shape>
