--- a/app/src/main/res/layout/activity_feed_rv_item_full.xml
+++ b/app/src/main/res/layout/activity_feed_rv_item_full.xml
@@ -4,7 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/baseline"
+	android:background="@color/colorPrimaryDark"
 	android:id="@+id/coordinator">
 
 	<com.google.android.material.appbar.AppBarLayout
@@ -20,13 +20,13 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			app:layout_scrollFlags="scroll|exitUntilCollapsed"
-			app:contentScrim="@color/baseline_tint1" >
+			app:contentScrim="@color/colorPrimary" >
 
 			<ImageView
 				android:id="@+id/main.backdrop"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:background="@color/baseline"
+				android:background="@color/colorPrimaryDark"
 				android:scaleType="centerInside"
 				android:src="@drawable/feed_content_man_in_suit" />
 
