--- a/app/src/main/res/layout/dialog_match.xml
+++ b/app/src/main/res/layout/dialog_match.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 	android:layout_height="match_parent"
 	android:layout_width="match_parent"
-	android:background="@color/material_black_1000"
+	android:background="@color/black"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
 
@@ -27,7 +27,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:background="@color/material_white_1000"
+			android:background="@color/white"
 			android:padding="5dp">
 
 			<EditText
@@ -58,7 +58,7 @@
 			android:layout_marginTop="50dp"
 			android:layout_marginBottom="50dp"
 			android:text="KEEP SWIPING..."
-			android:textColor="@color/material_white_1000"/>
+			android:textColor="@color/white"/>
 
 
 	</LinearLayout>
