--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/baseline"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center"
     android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
