--- a/app/src/main/res/layout/fragment_feed_page_item.xml
+++ b/app/src/main/res/layout/fragment_feed_page_item.xml
@@ -11,7 +11,7 @@
 		android:id="@+id/content_main_rv_feed"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
-		android:background="@color/baseline"
+		android:background="@color/colorPrimaryDark"
 		android:layout_marginStart="@dimen/card_margin_fix_rview_8"
 		android:layout_marginTop="@dimen/general_margin_16"
 		android:layout_marginEnd="@dimen/general_margin_16"
