--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="@color/baseline_tint1"
+	android:background="@color/colorPrimary"
 	android:paddingTop="@dimen/notifbar_size_24">
 
 
