--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,6 @@
 		<item name="colorOnSurface">@color/colorSurface</item>
 
 
-		<item name="actionModeBackground">@color/actionModeBackground</item>
-		<item name="android:colorBackground">@color/colorPrimaryDark</item>
-
-
-
 	</style>
 
 	<style name="AppTheme.NoActionBar">
@@ -41,15 +36,15 @@
 
 	<!-- auth tv 1 -->
 	<style name="auth_slogan1" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_medium</item>
 		<item name="android:textColor">@color/white</item>
-		<item name="android:fontFamily">@font/nunito_sans_bold</item>
 		<item name="android:textSize">@dimen/auth_tv_slogan1</item>
 	</style>
 
 	<!-- auth tv 2 -->
 	<style name="auth_slogan2" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_medium</item>
 		<item name="android:textColor">@color/white</item>
-		<item name="android:fontFamily">@font/nunito_sans_bold</item>
 		<item name="android:textSize">@dimen/auth_tv_slogan2</item>
 	</style>
 
@@ -57,7 +52,7 @@
 
 	<!-- tabs text -->
 	<style name="tab_text_36sp" parent="TextAppearance.Design.Tab">
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="textAllCaps">false</item>
 		<item name="android:textColor">@color/white_10</item>
 		<item name="android:textSize">36sp</item>
@@ -67,53 +62,72 @@
 
 	<!-- header 2 -->
 	<style name="regular_text_white_24sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
 		<item name="android:textSize">24sp</item>
 	</style>
 
 	<!-- header 3 -->
 	<style name="regular_text_white_20sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
 		<item name="android:textSize">20sp</item>
 	</style>
 
 
+	<!-- conversations sender name-->
+	<style name="bold_text_white_16sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_bold</item>
+		<item name="android:textColor">@color/white_85</item>
+		<item name="android:textSize">16sp</item>
+	</style>
+
+	<!-- conversations content message text -->
+	<style name="light_text_white_16sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_light</item>
+		<item name="android:textColor">@color/white_85</item>
+		<item name="android:textSize">16sp</item>
+
+	</style>
+
+
+	<style name="regular_text_white_18sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
+		<item name="android:textColor">@color/white_85</item>
+		<item name="android:textSize">18sp</item>
+	</style>
 
 	<!-- basic tv -->
 	<style name="regular_text_white_16sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
 		<item name="android:textSize">16sp</item>
+	</style>
+
+	<!-- chat timestamp textview	-->
+	<style name="regular_text_white_8sp_25op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
+		<item name="android:textColor">@color/white_25</item>
+		<item name="android:textSize">12sp</item>
 	</style>
 
 	<!-- feed content text-->
 	<style name="light_text_white_12sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_light</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_light</item>
 		<item name="android:textSize">12sp</item>
 	</style>
 
 	<!-- feed content author name -->
 	<style name="regular_text_white_12sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
 		<item name="android:textSize">12sp</item>
 	</style>
-
-
-	<!-- chat timestamp textview	-->
-	<style name="regular_text_white_8sp_25op" parent="Widget.AppCompat.TextView">
-		<item name="android:textColor">@color/white_25</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
-		<item name="android:textSize">12sp</item>
-	</style>
-
 
 	<style name="regular_text_white_14sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:fontFamily">@font/nunito_sans_regular</item>
 		<item name="android:textSize">16sp</item>
 	</style>
 
