--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -47,10 +47,10 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/background"
-			app:layout_constraintBottom_toTopOf="@id/messageItem" />
+			app:layout_constraintBottom_toTopOf="@id/message" />
 
 		<TextView
-			android:id="@+id/messageItem"
+			android:id="@+id/message"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:gravity="center"
@@ -81,7 +81,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@id/positiveBtn"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/messageItem" />
+			app:layout_constraintTop_toBottomOf="@id/message" />
 
 		<Button
 			android:id="@+id/positiveBtn"
