auth background fix

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/auth_container"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@drawable/background"
+	android:background="@color/colorPrimaryDark"
 	android:paddingTop="24dp"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
+	<FrameLayout
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
+		<ImageView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:scaleType="centerCrop"
+			android:src="@drawable/background"
+			tools:ignore="ContentDescription" />
+	</FrameLayout>
+
 
 	<TextView
 		android:id="@+id/tv_logan1"
-		style="@style/auth_slogan1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="Find new\nfriends nearby"
@@ -19,7 +33,8 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintVertical_bias="0.1"/>
+		app:layout_constraintVertical_bias="0.1"
+		style="@style/auth_slogan1"/>
 
 
 	<TextView
