--- a/app/src/main/res/layout/activity_auth_fragment_reg.xml
+++ b/app/src/main/res/layout/activity_auth_fragment_reg.xml
@@ -91,7 +91,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/tv_reg_2"
-			app:layout_constraintBottom_toTopOf="@id/diag_reg_btn_done"
+			app:layout_constraintBottom_toTopOf="@id/reg_btn_done"
 			app:sbg_animateSelector="bounce"
 			app:sbg_animateSelectorDuration="1000"
 			app:sbg_backgroundColor="@color/white"
@@ -138,7 +138,7 @@
 		</co.ceryle.segmentedbutton.SegmentedButtonGroup>
 
 		<com.mmdev.roove.ui.custom.ProgressButton
-			android:id="@+id/diag_reg_btn_done"
+			android:id="@+id/reg_btn_done"
 			android:layout_height="50dp"
 			android:layout_width="match_parent"
 			android:layout_marginTop="24dp"
