--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -8,11 +8,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <ImageView
+        android:id="@+id/card_loading_progress_iv"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/loading"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+	    android:id="@+id/card_helper_text_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+	    android:gravity="center"
+        android:text="There is no available users matching your preferences"
+	    android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+	    app:layout_constraintTop_toBottomOf="@id/card_loading_progress_iv"
+	    app:layout_constraintVertical_bias="0.3"
+	    style="@style/regular_text_white_18sp_85op"/>
+
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/card_stack_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         tools:listitem="@layout/fragment_card_item"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
